<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kalkulator_bmi"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Umur                  :"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="329dp"
                tools:layout_editor_absoluteY="93dp" />
            <EditText
                android:id="@+id/editTextUmur"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="138dp" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="tahun"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="329dp"
                tools:layout_editor_absoluteY="93dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tinggi Badan    :"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="329dp"
                tools:layout_editor_absoluteY="93dp" />
            <EditText
                android:id="@+id/editTextTB"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="138dp" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="cm"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="329dp"
                tools:layout_editor_absoluteY="93dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Berat Badan      :"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="329dp"
                tools:layout_editor_absoluteY="93dp" />
            <EditText
                android:id="@+id/editTextBB"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="138dp" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="kg"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="329dp"
                tools:layout_editor_absoluteY="93dp" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnHitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hitung"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hasil"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHitung" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="225dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Umur Anda     : "
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/txtUmur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tinggi Badan  : "
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/txtTB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Berat Badan    : "
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/txtBB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BMI Anda         : "
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/txtBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kategori           : "
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/txtKategori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>